refactor(stores/ZustandWrapper): brings together all Zustand components to share in a single form for the layout.tsx

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,14 @@
 # 2. Fill in the required values specific to your environment.
 # 3. Never commit your ".env.local" file to version control. It must be private and kept secure.
 
+# The route users see once authenticated (e.g., /dashboard)
+NEXT_PUBLIC_AUTHENTICATED_ROUTE=
+
+# The route users see when not authenticated (e.g., /login)
+NEXT_PUBLIC_NOT_AUTHENTICATED_ROUTE=
+
+# Name of the cookie that stores the authentication token
+NEXT_PUBLIC_AUTH_COOKIE_NAME=
+
+# Base URL of your backend API (e.g., https://api.yoursite.com)
 NEXT_PUBLIC_URL_API=
