feat(pages/Carousel): carousel management screen, controls the active photos in the carousel, title, order in which each photo will appear in the carousel, add a new photo, delete a photo, and edit photos

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ NEXT_PUBLIC_AUTH_COOKIE_NAME=
 
 # Base URL of your backend API (e.g., https://api.yoursite.com)
 NEXT_PUBLIC_URL_API=
+
+# Cloudinary Connection
+NEXT_PUBLIC_CLOUDINARY_NAME=
