--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.21.0",
     "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
