fix(src/middleware): fixed access token expiry preventing automatic refresh token validation and remove redundant token validation

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,9 @@ NEXT_PUBLIC_AUTHENTICATED_ROUTE=
 # The route users see when not authenticated (e.g., /login)
 NEXT_PUBLIC_NOT_AUTHENTICATED_ROUTE=
 
-# Name of the cookie that stores the authentication token
-NEXT_PUBLIC_AUTH_COOKIE_NAME=
+# Name of the cookie that stores the authentication token in the access and refresh token
+NEXT_PUBLIC_ACCESS_COOKIE=access_token
+NEXT_PUBLIC_REFRESH_COOKIE=refresh_token
 
 # Base URL of your backend API (e.g., https://api.yoursite.com)
 NEXT_PUBLIC_URL_API=
