feat(hooks/useGetAllCategories): add the function useGetAllCategoriesPublic to show unauthenticated users all categories available for filtering

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,8 @@ NEXT_PUBLIC_AUTHENTICATED_ROUTE=
 # The route users see when not authenticated (e.g., /login)
 NEXT_PUBLIC_NOT_AUTHENTICATED_ROUTE=
 
-# Name of the cookie that stores the authentication token in the access and refresh token
-NEXT_PUBLIC_ACCESS_COOKIE=access_token
-NEXT_PUBLIC_REFRESH_COOKIE=refresh_token
+# Name of the public refresh cookie to validated in the middleware
+NEXT_PUBLIC_REFRESH_COOKIE=
 
 # Base URL of your backend API (e.g., https://api.yoursite.com)
 NEXT_PUBLIC_URL_API=
